Update to BlueMapAPI 2.1.0 & Compat with mc1.13+🚧