@@ -1,15 +1,14 @@
 package net.mctechnic.bluemapofflineplayermarkers;
 
+import com.flowpowered.math.vector.Vector3d;
 import com.flowpowered.nbt.CompoundMap;
 import com.flowpowered.nbt.CompoundTag;
 import com.flowpowered.nbt.DoubleTag;
 import com.flowpowered.nbt.stream.NBTInputStream;
 import de.bluecolored.bluemap.api.BlueMapAPI;
 import de.bluecolored.bluemap.api.BlueMapMap;
-import de.bluecolored.bluemap.api.BlueMapWorld;
-import de.bluecolored.bluemap.api.marker.MarkerAPI;
-import de.bluecolored.bluemap.api.marker.MarkerSet;
-import de.bluecolored.bluemap.api.marker.POIMarker;
+import de.bluecolored.bluemap.api.markers.MarkerSet;
+import de.bluecolored.bluemap.api.markers.POIMarker;
 import net.mctechnic.bluemapofflineplayermarkers.commands.OfflineMarkers;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
@@ -33,9 +32,9 @@ import java.io.InputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
 import static org.bukkit.util.NumberConversions.round;
 
@@ -46,6 +45,8 @@ public final class Main extends JavaPlugin implements Listener {
 
 	public final String markerSetId = "offplrs";
 	public final String markerSetName = "Offline Players";
+
+	private Map<UUID, MarkerSet> markerSets;
 
 	public static void recolour(BufferedImage image) {
 		for (int y = 0; y < image.getHeight(); y++) {
@@ -76,101 +77,63 @@ public final class Main extends JavaPlugin implements Listener {
 	}
 
 	public void addMarker(Player player) {
-		BlueMapAPI.getInstance().ifPresent(blueMapAPI -> {
-			MarkerAPI markerAPI;
-
-			try {
-				markerAPI = blueMapAPI.getMarkerAPI();
-			} catch (IOException e) {
-				e.printStackTrace();
-				return;
-			}
-
-			addMarker(blueMapAPI, markerAPI, player, player.getLocation());
-
-			try {
-				markerAPI.save();
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-		});
+		addMarker(player, player.getLocation());
 	}
 
-	public void addMarker(BlueMapAPI blueMapAPI, MarkerAPI markerAPI, OfflinePlayer player, Location location) {
-		MarkerSet markerSet;
+	public void addMarker(OfflinePlayer player, Location location) {
+		Optional<BlueMapAPI> optionalApi = BlueMapAPI.getInstance();
+		if (optionalApi.isEmpty()) {
+			getLogger().warning("Tried to add a marker, but BlueMap wasn't loaded!");
+			return;
+		}
+		BlueMapAPI api = optionalApi.get();
 
-		if (markerAPI.getMarkerSet(markerSetId).isEmpty()) {
-			markerSet = markerAPI.createMarkerSet(markerSetId);
-			markerSet.setLabel(markerSetName);
+		POIMarker marker = new POIMarker(player.getName(), new Vector3d(location.getX(), location.getY(), location.getZ())); //make the marker
+
+		BufferedImage image;
+		if (useBlueMapSource) {
+			image = getBImgFromFile(player);
 		} else {
-			markerSet = markerAPI.getMarkerSet(markerSetId).get();
+			image = getBImgFromURL(player);
+		}
+		if (image == null) return;
+
+		recolour(image);
+		image = resize(image, 32, 32);
+
+		try {
+			String imagePath = api.getWebApp().createImage(image, "offlineplayerheads/" + player.getUniqueId());
+			marker.setIcon(imagePath, image.getWidth() / 2, image.getHeight() / 2);
+		} catch (IOException e) {
+			e.printStackTrace();
+			return;
 		}
 
-		Optional<BlueMapWorld> blueMapWorld = blueMapAPI.getWorld(location.getWorld().getUID()); //get the player's world
-
-		if (blueMapWorld.isPresent()) //check if the world exists/is loaded
-		{
-			for (BlueMapMap map : blueMapWorld.get().getMaps()) { //then for every map of the world (worlds can have multiple maps)
-				POIMarker marker = markerSet.createPOIMarker(player.getUniqueId().toString(), map,
-						location.getX(), location.getY(), location.getZ()); //make the marker
-				marker.setLabel(player.getName());
-
-				BufferedImage image;
-				if(useBlueMapSource) {
-					image = getBImgFromFile(blueMapAPI, player);
-				} else {
-					image = getBImgFromURL(player);
-				}
-				if (image == null) return;
-
-				recolour(image);
-				image = resize(image, 32, 32);
-
-				try {
-					String imagePath = blueMapAPI.createImage(image, "offlineplayerheads/" + player.getUniqueId());
-					marker.setIcon(imagePath, image.getWidth() / 2, image.getHeight() / 2);
-				} catch (IOException e) {
-					e.printStackTrace();
-					return;
-				}
-			}
-		}
+		markerSets.get(location.getWorld().getUID()).getMarkers().put(player.getUniqueId().toString(), marker);
 
 		getLogger().info("Marker for " + player.getName() + " added");
 	}
 
 	public void removeMarker(Player player) {
-		BlueMapAPI.getInstance().ifPresent(blueMapAPI -> {
-			MarkerAPI markerAPI;
-
-			try {
-				markerAPI = blueMapAPI.getMarkerAPI();
-			} catch (IOException e) {
-				e.printStackTrace();
-				return;
-			}
-
-			removeMarker(markerAPI, player);
-
-			try {
-				markerAPI.save();
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
-		});
-	}
-
-	public void removeMarker(MarkerAPI markerAPI, Player player) {
-		markerAPI.getMarkerSet(markerSetId).ifPresent(markerSet ->
-				markerSet.removeMarker(player.getUniqueId().toString()));
+		World world = player.getWorld();
+		MarkerSet markerSet = markerSets.get(world.getUID());
+		if (markerSet == null) {
+			getLogger().warning("Tried to remove a marker, but there is no marker set for the world " + world.getName());
+			return;
+		}
+		markerSet.getMarkers().remove(player.getUniqueId().toString());
 
 		getLogger().info("Marker for " + player.getName() + " removed");
 	}
 
-	BufferedImage getBImgFromFile(BlueMapAPI blueMapAPI, OfflinePlayer player) {
+	BufferedImage getBImgFromFile(OfflinePlayer player) {
+		Optional<BlueMapAPI> optionalApi = BlueMapAPI.getInstance();
+		if (optionalApi.isEmpty()) return null;
+		BlueMapAPI api = optionalApi.get();
+
 		BufferedImage result;
-		File f = new File(blueMapAPI.getWebRoot() + "/assets/playerheads/" + player.getUniqueId() + ".png");
-		if(f.exists()) {
+		File f = new File(api.getWebApp().getWebRoot() + "/assets/playerheads/" + player.getUniqueId() + ".png");
+		if (f.exists()) {
 			try {
 				result = ImageIO.read(f);
 			} catch (IOException e) {
@@ -179,19 +142,20 @@ public final class Main extends JavaPlugin implements Listener {
 			}
 		} else {
 			getLogger().warning("Marker for " + player.getName() + " couldn't be added!" + (verboseErrors ? "" : " (config: verboseErrors)"));
-			if(verboseErrors) {
+			if (verboseErrors) {
 				getLogger().warning(" Couldn't find the playerhead image file in BlueMap's resources");
 				getLogger().warning(" This is likely due to the fact that BlueMap was installed after they last logged off");
 				getLogger().warning(" Falling back to a Steve skin");
 			}
 			try {
-				result = ImageIO.read(new File(blueMapAPI.getWebRoot() + "/assets/steve.png"));
+				result = ImageIO.read(new File(api.getWebApp().getWebRoot() + "/assets/steve.png"));
 			} catch (IOException e) {
 				e.printStackTrace();
 				return null;
 			}
 		}
 		return result;
+
 	}
 
 	BufferedImage getBImgFromURL(OfflinePlayer player) {
@@ -213,10 +177,49 @@ public final class Main extends JavaPlugin implements Listener {
 		return result;
 	}
 
+	Consumer<BlueMapAPI> onEnableListener = api -> {
+		getLogger().info("API ready!");
+		loadConfig();
+
+		//loop through all worlds
+		List<World> worlds = Bukkit.getWorlds();
+		for (World world : worlds) {
+			MarkerSet markerSet;
+			//if this world already has a markerset, get that one
+			if (markerSets.containsKey(world.getUID())) {
+				markerSet = markerSets.get(world.getUID());
+			} else {
+				//make a new markerset
+				markerSet = new MarkerSet(markerSetName);
+				markerSet.setDefaultHidden(false);
+				markerSet.setToggleable(true);
+
+				//add the markerset to the global world,markerset collection, so it can be accessed later
+				markerSets.put(world.getUID(), markerSet);
+			}
+
+			//add that markerset to each bluemap map of every world
+			api.getWorld(world).ifPresent(bmWorld -> {
+				for (BlueMapMap map : bmWorld.getMaps()) {
+					map.getMarkerSets().put(markerSetId, markerSet);
+				}
+			});
+		}
+
+		//remove markers for all online players (async, because that works here)
+		Bukkit.getScheduler().runTaskAsynchronously(this, () -> {
+			for (Player p : Bukkit.getOnlinePlayers()) {
+				removeMarker(p);
+			}
+		});
+	};
+
 	Consumer<BlueMapAPI> onDisableListener = blueMapAPI -> {
 		getLogger().info("API shutting down!");
-		//No async on shutdown, otherwise BlueMap might have already shut down
-		markAllOnlinePlayers(blueMapAPI);
+		//add markers for every online player (not async, because otherwise BlueMap might have already shut down)
+		for (Player p : Bukkit.getOnlinePlayers()) {
+			addMarker(p);
+		}
 	};
 
 	@Override
@@ -235,15 +238,9 @@ public final class Main extends JavaPlugin implements Listener {
 			getLogger().warning("offlineMarkers is null. This is not good");
 		}
 
-		BlueMapAPI.onEnable(blueMapAPI -> {
-			getLogger().info("API ready!");
-			loadConfig();
+		markerSets = new HashMap<>();
 
-			//Async on startup
-			Bukkit.getScheduler().runTaskAsynchronously(this, () ->
-					removeAllOnlinePlayers(blueMapAPI));
-		});
-
+		BlueMapAPI.onEnable(onEnableListener);
 		BlueMapAPI.onDisable(onDisableListener);
 	}
 
@@ -253,92 +250,41 @@ public final class Main extends JavaPlugin implements Listener {
 		verboseErrors = true;
 	}
 
-	private void removeAllOnlinePlayers(BlueMapAPI blueMapAPI) {
-		MarkerAPI markerAPI;
-
-		try {
-			markerAPI = blueMapAPI.getMarkerAPI();
-		} catch (IOException e) {
-			e.printStackTrace();
-			return;
-		}
-
-		for (Player p : Bukkit.getOnlinePlayers()) {
-			removeMarker(markerAPI, p);
-		}
-
-    for (Player p : Bukkit.getOnlinePlayers()) {
-      addMarker(blueMapAPI, markerAPI, p, p.getLocation());
-    }
-  }
-
-	private void markAllOnlinePlayers(BlueMapAPI blueMapAPI) {
-		MarkerAPI markerAPI;
-
-		try {
-			markerAPI = blueMapAPI.getMarkerAPI();
-		} catch (IOException e) {
-			e.printStackTrace();
-			return;
-		}
-
-		for (Player p : Bukkit.getOnlinePlayers()) {
-			addMarker(blueMapAPI, markerAPI, p, p.getLocation());
-		}
-
-		try {
-			markerAPI.save();
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
-	}
-
-	public void resetMarkers(){
+	//used in the command
+	public void resetMarkers() {
 		//Clear the marker set (called by command or in preparation for loading markers from playerdata)
 		Optional<BlueMapAPI> oApi = BlueMapAPI.getInstance();
-		if(oApi.isEmpty()) return;
+		if (oApi.isEmpty()) return;
 		BlueMapAPI api = oApi.get();
-		try {
-			MarkerAPI markerAPI = api.getMarkerAPI();
-			markerAPI.removeMarkerSet(markerSetId);
-			MarkerSet emptySet = markerAPI.createMarkerSet(markerSetId);
-			emptySet.setLabel(markerSetName);
-			markerAPI.save();
-		}catch(IOException e){
-			e.printStackTrace();
+
+		for (World world : Bukkit.getWorlds()) {
+			api.getWorld(world).ifPresent(bmWorld -> {
+				for (BlueMapMap map : bmWorld.getMaps()) {
+					map.getMarkerSets().get(markerSetId).getMarkers().clear();
+				}
+			});
 		}
 	}
 
-	public void loadMarkers(){
-
-		Optional<BlueMapAPI> oApi = BlueMapAPI.getInstance();
-		if(oApi.isEmpty()) return;
-		BlueMapAPI api = oApi.get();
-		MarkerAPI markerAPI;
-		try {
-			markerAPI = api.getMarkerAPI();
-		}catch (IOException e){
-			e.printStackTrace();
-			return;
-		}
-
+	//used in the command
+	public void loadMarkers() {
 		//I really don't like "getWorlds().get(0)" as a way to get the main world, but as far as I can tell there is no other way
 		File playerDataFolder = new File(Bukkit.getWorlds().get(0).getWorldFolder(), "playerdata");
 		//Return if playerdata is missing for some reason.
-		if(!playerDataFolder.exists() || !playerDataFolder.isDirectory()) return;
+		if (!playerDataFolder.exists() || !playerDataFolder.isDirectory()) return;
 
-		for(OfflinePlayer op : Bukkit.getOfflinePlayers()){
+		for (OfflinePlayer op : Bukkit.getOfflinePlayers()) {
 			//If player is online, ignore (I don't know why the method is called "getOfflinePlayers" when it also contains all online players...)
-			if(op.isOnline()) continue;
+			if (op.isOnline()) continue;
 
 			File dataFile = new File(playerDataFolder, op.getUniqueId() + ".dat");
 
 			//Failsafe if playerdata doesn't exist (should be impossible but whatever)
-			if(!dataFile.exists()) continue;
+			if (!dataFile.exists()) continue;
 
 			CompoundMap nbtData;
-			try(FileInputStream fis = new FileInputStream(dataFile);
-				NBTInputStream nbtInputStream = new NBTInputStream(fis)) {
+			try (FileInputStream fis = new FileInputStream(dataFile);
+				 NBTInputStream nbtInputStream = new NBTInputStream(fis)) {
 				nbtData = ((CompoundTag) nbtInputStream.readTag()).getValue();
 			} catch (IOException e) {
 				e.printStackTrace();
@@ -349,22 +295,17 @@ public final class Main extends JavaPlugin implements Listener {
 			long worldUUIDLeast = (long) nbtData.get("WorldUUIDLeast").getValue();
 			long worldUUIDMost = (long) nbtData.get("WorldUUIDMost").getValue();
 			@SuppressWarnings("unchecked") //Apparently this is just how it should be https://discord.com/channels/665868367416131594/771451216499965953/917450319259115550
-			List<Double> position = ((List<DoubleTag>) nbtData.get("Pos").getValue()).stream().map(DoubleTag::getValue).toList();
+			List<Double> position = ((List<DoubleTag>) nbtData.get("Pos").getValue()).stream().map(DoubleTag::getValue).collect(Collectors.toList());
 
 			//Convert to location
 			UUID worldUUID = new UUID(worldUUIDMost, worldUUIDLeast);
 			World w = Bukkit.getWorld(worldUUID);
 			//World doesn't exist or position is broken
-			if(w == null || position.size() != 3) continue;
+			if (w == null || position.size() != 3) continue;
 			Location loc = new Location(w, position.get(0), position.get(1), position.get(2));
 
 			//Add marker
-			addMarker(api, markerAPI, op, loc);
-		}
-		try {
-			markerAPI.save();
-		} catch (IOException e) {
-			e.printStackTrace();
+			addMarker(op, loc);
 		}
 	}
 
@@ -386,7 +327,12 @@ public final class Main extends JavaPlugin implements Listener {
 
 	@Override
 	public void onDisable() {
-		BlueMapAPI.getInstance().ifPresent(this::markAllOnlinePlayers);
+		BlueMapAPI.getInstance().ifPresent(api -> {
+			for (Player p : Bukkit.getOnlinePlayers()) {
+				removeMarker(p);
+			}
+		});
+		BlueMapAPI.unregisterListener(onEnableListener);
 		BlueMapAPI.unregisterListener(onDisableListener);
 		getLogger().info("BlueMap Offline Player Markers plugin disabled!");
 	}
